--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -13,7 +13,7 @@ colors:
     cyan: '#88c0d0'
     white: '#e5e9f0'
   bright:
-    black: '#4c566a' #616e88
+    black: '#4c566a'
     red: '#bf616a'
     green: '#a3be8c'
     yellow: '#ebcb8b'
@@ -21,9 +21,15 @@ colors:
     magenta: '#b48ead'
     cyan: '#8fbcbb'
     white: '#eceff4'
-  indexed_colors:
-    - { index: 16, color: '#242831' }
-    - { index: 17, color: '#616e88' }
+  dim:
+    black: '#242831'
+    red: '#94545d'
+    green: '#809575'
+    yellow: '#b29e75'
+    blue: '#68809a'
+    magenta: '#8c738c'
+    cyan: '#6d96a5'
+    white: '#aeb3bb'
 cursor:
   style:
     blinking: Never
@@ -55,6 +61,11 @@ font:
 #   - { key: F, mods: Command, action: ToggleSimpleFullScreen }
 mouse:
   hide_when_typing: true
+# shell:
+#   shell: fish
+#   args:
+#     - -c
+#     - archey3
 window:
   dynamic_padding: true
   padding:
