update awesome config and add awmtt

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -20,8 +20,10 @@ draw_bold_text_with_bright_colors: true
 # Bindings
 #
 
-# key_bindings:
-#   - { key: F, mods: Command, action: ToggleSimpleFullScreen }
+key_bindings:
+  - { key: L, mods: Control, chars: "\x0c" }
+  - { key: L, mods: Control|Shift, action: ClearHistory }
+  # - { key: F, mods: Command, action: ToggleSimpleFullScreen }
 
 #
 # Colors
