--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -14,7 +14,7 @@
 # Globals
 #
 
-background_opacity: 0.95
+background_opacity: 0.96
 draw_bold_text_with_bright_colors: true
 
 #
@@ -24,7 +24,7 @@ draw_bold_text_with_bright_colors: true
 key_bindings:
   - { key: L, mods: Control, chars: "\x0c" }
   - { key: L, mods: Control|Shift, action: ClearHistory }
-  - { key: F, mods: Command, action: ToggleSimpleFullScreen }
+  # - { key: F, mods: Command, action: ToggleSimpleFullScreen }
 
 #
 # Colors
@@ -34,6 +34,23 @@ colors:
   primary:
     background: '#2e3440'
     foreground: '#d8dee9'
+    dim_foreground: '#a5abb6'
+  cursor:
+    text: '#2e3440'
+    cursor: '#d8dee9'
+  vi_mode_cursor:
+    text: '#2e3440'
+    cursor: '#d8dee9'
+  selection:
+    text: CellForeground
+    background: '#4c566a'
+  search:
+    matches:
+      foreground: CellBackground
+      background: '#88c0d0'
+    bar:
+      background: '#434c5e'
+      foreground: '#d8dee9'
   normal:
     black: '#3b4252'
     red: '#bf616a'
@@ -52,6 +69,15 @@ colors:
     magenta: '#b48ead'
     cyan: '#8fbcbb'
     white: '#eceff4'
+  dim:
+    black: '#373e4d'
+    red: '#94545d'
+    green: '#809575'
+    yellow: '#b29e75'
+    blue: '#68809a'
+    magenta: '#8c738c'
+    cyan: '#6d96a5'
+    white: '#aeb3bb'
 
 #
 # Cursor
