--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -24,7 +24,7 @@ draw_bold_text_with_bright_colors: true
 key_bindings:
   - { key: L, mods: Control, chars: "\x0c" }
   - { key: L, mods: Control|Shift, action: ClearHistory }
-  # - { key: F, mods: Command, action: ToggleSimpleFullScreen }
+  - { key: F, mods: Command|Control, action: ToggleSimpleFullScreen }
 
 #
 # Colors
